<resources>
    <string name="app_name">Profsoft2024</string>
    <string name="second_activity">Активити 2</string>
    <string name="notification">Уведомление</string>
    <string name="title_profile">Профиль</string>
    <string name="full_name">Иван \nИванов \nИванович</string>
    <string name="date_of_birth">Дата Рождения:</string>
    <string name="date_of_birth_value">01.01.2001</string>
    <string name="city">Город</string>
    <string name="city_value">Саратов</string>
    <string name="about_me">О себе</string>
    <string name="about_me_value">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.</string>
    <string name="edit_profile">Редактировать профиль</string>
</resources>